# PGR_OpenGL-Interactive-Scene

./: README.md  index.html
source/: .clang-format  CMakeLists.txt  CMakePresets.json
source/lib/glew/: CMakeLists.txt
source/lib/glfw/: CMakeLists.txt
source/lib/stb/: CMakeLists.txt
source/lib/tinygltf/: CMakeLists.txt  tiny_gltf.cc
source/res/Models/Box/: Box.h
source/res/Models/Cat/: Cat.cpp  Cat.h  cat.glb
source/res/Models/Icosphere/: sphere.blend
source/res/Models/Scene/: scene.glb
source/res/Shaders/: Water_V.glsl
source/src/: App.cpp  App.h  main.cpp  pch.h
source/src/Components/: Camera.cpp  Camera.h  Light.cpp  Light.h  MeshRenderer.h  Transform.cpp  Transform.h
source/src/Objects/: CameraObject.h  LightObject.cpp  LightObject.h  RenderObject.h
source/src/Resources/Material/: MaterialPGR.cpp  MaterialPGR.h
source/src/Resources/Mesh/: Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  MeshSource.cpp  MeshSource.h
source/src/Resources/Mesh/Loader/: GltfLoader.cpp  GltfLoader.h
source/src/Resources/Shader/: Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  ShaderSource.cpp  ShaderSource.h  ShaderUtils.h
source/src/Resources/Texture/: Texture.h  TextureInfo.h  TextureSource.cpp  TextureSource.h
source/src/Utils/: GlfwUtils.h
